공룡게임 CSS, JS파일 수정

--- a/Css/dinosaur.css
+++ b/Css/dinosaur.css
@@ -1,27 +1,14 @@
-<<<<<<< HEAD
-@import url("//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.530/neodgm_code/style.css");
+@import url("https://fonts.cdnfonts.com/css/public-pixel");
 * {
-  font-family: "NeoDunggeunmo Code";
+  font-family: "Public Pixel", sans-serif;
 }
+
 body {
   background-image: url("../Assets/dinosaur/background.png");
   background-size: cover;
   background-position: center;
   margin: 40px;
 }
-=======
-@import url('//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.530/neodgm_code/style.css');
-  *{
-    font-family: 'NeoDunggeunmo Code';
-  }
-body {
-  background-image: url('../Assets:dinogame/background.png');
-  background-size: cover;
-  background-position: center;
-  margin: 40px;
-  }
-
->>>>>>> main
 
 #game-container {
   position: relative;
@@ -31,11 +18,7 @@ body {
   background-color: #f2f2f2;
   margin: 0 auto;
   overflow: hidden;
-<<<<<<< HEAD
   background-image: url("../Assets/dinosaur/game-back.png");
-=======
-  background-image: url('../Assets:dinogame/game-back.png');
->>>>>>> main
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -45,11 +28,7 @@ body {
   position: absolute;
   width: 70px;
   height: 50px;
-<<<<<<< HEAD
   background-image: url("../Assets/dinosaur/dinosaur.png");
-=======
-  background-image: url("../Assets:dinogame/dinosaur.png");
->>>>>>> main
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -96,18 +75,39 @@ body {
   position: absolute;
   width: 20px;
   height: 20px;
-<<<<<<< HEAD
   background-image: url("../Assets/dinosaur/obstacle.png");
-=======
-  background-image: url("../Assets:dinogame/obstacle.png");
->>>>>>> main
   background-size: cover;
 }
 
 button {
   border-radius: 8px;
-<<<<<<< HEAD
 }
-=======
-}
->>>>>>> main
+
+#score-container {
+  margin: 20px auto;
+  text-align: center;
+  position: relative;
+  width: 600px;
+  height: 300px;
+  border-radius: 10px;
+  background-color: black;
+  overflow: hidden;
+  color: white;
+  }
+  
+  #score-list-container {
+  list-style: none;
+  padding: 0;
+  color: white;
+  }
+  
+  #score-list-container li {
+  margin-bottom: 5px;
+  font-size: 18px;
+  color: white;
+  }
+  
+  #spacebar {
+  text-align: center;
+  position: relative;
+  }
