공룡게임 점수-날짜 형식으로 노출되도록 랭킹시스템 수정

--- a/Css/dinosaur.css
+++ b/Css/dinosaur.css
@@ -94,20 +94,27 @@ button {
   overflow: hidden;
   color: white;
   }
+
+#score-container span {
+  font-size: 20px;
+  margin-right: 22%;
+  color: white;
+  ;
+}
   
-  #score-list-container {
+#score-table {
   list-style: none;
   padding: 0;
   color: white;
-  }
+}
   
-  #score-list-container li {
-  margin-bottom: 5px;
-  font-size: 18px;
-  color: white;
-  }
+table {
+  width: 600px;
+  height: 250px;
+  margin: 3% auto auto 9%;
+}
   
-  #spacebar {
+#spacebar {
   text-align: center;
   position: relative;
-  }
+}
